# ChangeLog for sys-fs/ext3grep
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2008; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +ext3grep-0.10.0.ebuild, +files/gcc-4.3.patch, +metadata.xml:
  Initial commit - related bug 246191
