@@ -1,5 +1,5 @@
 AUX gcc-4.3.patch 5338 RMD160 02bd66436fc309823c632abf0710d6d90fd7f4a6 SHA1 ffff4763ba1977577a102f0b7a00773b6304d903 SHA256 c1d887e26d7d5b19f7a3fe1653e711752259912c190f6b385f0dbb69c0523cc2
 DIST ext3grep-0.10.0.tar.gz 230848 RMD160 5ee2e7f12935d150da32e7ab3a0a03863c444f59 SHA1 38d5295196446f69df56feda41a3902e08578f02 SHA256 4faac195ea9e24753f129d681847c289991ef2dfdb1207db1c47d2a81d8d0c0f
 EBUILD ext3grep-0.10.0.ebuild 885 RMD160 1ced70d25d3abca31b3783e2df3d8e3fa7c83477 SHA1 14620230130bff94d9887d80b21f1c4a847b5f13 SHA256 010725b55bb39fb976359a744fd749ad036080e1b686b4d47dfaa85c019a2994
-MISC ChangeLog 276 RMD160 89af00160815f2a52a97bb5a51208507fb5186ef SHA1 e5bc48c4ae4a6971fd504b6a64c713f0adbd2c4e SHA256 eba05076ba3da49db8d450ffe1bed7d2aaef1c62b603e0d700fb72f97b986cd2
-MISC metadata.xml 502 RMD160 beb208bc7149027d90b457403a5ddf0b6ca73f6b SHA1 c405c2ff44b5fc9db328b6d6565f588cd97ab0f0 SHA256 d4cd99acc83ff468330ac88462f75e3356f98c979360bb5a528de13f34f84628
+MISC ChangeLog 369 RMD160 6bbb522a9d9ae2d885e46b06f7ecf33803f6ece8 SHA1 32d21cfe83b640958fa62c89df2ab914117b1415 SHA256 fce51faa62410f8699a58b09d5684263064a7a6a5f101f71e2d76c4baebc414e
+MISC metadata.xml 311 RMD160 3b578725b040cfd641529b2a6e96ea858cdc89dd SHA1 c5877275a44df0a3be795b9932796c45f4a70d5d SHA256 89ad924105e063aa2be6cbded89d22d13ba497d497ff052bb6dde1780abc5460
